# control-valve-stiction-implementation

./: 123.txt  LC.py  LICENSE  README.md  pyproject.toml  svr_test_new.py  svr_use.py  svr_use_new.py  test.py
LC_FC_training/: FC.py  LC.py
new_project/: FIC-211_20241121~27.csv  LIC-106_20241121~27.csv
new_project/csv/essay_1/: stiction_signal_method1_flow.csv  stiction_signal_method1_loop2.csv  stiction_signal_method2_flow.csv  stiction_signal_method2_loop2.csv  stiction_signal_method3_loop2.csv  stiction_signal_method4_loop2.csv
new_project/csv/essay_3/: stiction_signal_linear_regression_flow.csv  stiction_signal_linear_regression_loop10.csv  stiction_signal_linear_regression_loop2.csv  stiction_signal_linear_regression_loop32.csv  stiction_signal_linear_regression_loop6.csv
new_project/csv/final/: 12_2_23_29_op.csv  12_2_23_29_pv.csv  13_11_1_10_24_op.csv  13_11_1_10_24_pv.csv  epsilon_valid_mse.csv  pulp_4_7_9_2_5_op.csv  pulp_4_7_9_2_5_pv.csv  r_val.csv  scaled_12_2_23_29_op.csv  scaled_12_2_23_29_pv.csv  stiction_array.csv
new_project/final/: compute_combined_data_r_value.py  data.py  draw_stiction_control_valve.py  function_file.py  plot_svr.py  svr_class.py  svr_class_new.py  svr_test.py  svr_use_new.py
new_project/thesis_1/: method1_class.py  method2_class.py  method3_class.py  method4_class.py  plot.py  quantification_class.py  test.py
new_project/thesis_2/: sigmoid_class.py  test.py
new_project/thesis_3/: linear_regression_class.py  method_stiction_class.py  quantification_class.py  tempCodeRunnerFile.py  test.py
(+13 files in other folders)
